# Spooky2DatabaseAnalyser

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  spooky2-database-analyser.pro
include/: Spooky2DatabaseAnalyser.h  Utils.h  dialog.h  s2dbanalyser.h
src/: Spooky2DatabaseAnalyser.cpp  dialog.cpp  s2dbanalyser.cpp
utils/: sanitize_dates.sh
